--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: write
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
@@ -56,8 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     permissions:
-      contents: read
-      packages: write
+      contents: write
     steps:
 
       - name: Download descriptor artifact
